[package]
name = "opaque-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.*", features = ["json"] }
futures = { version = "0.3.*"}
tokio = {version = "0.2.*", features = ["full"] }
log = "0.4.*"
env_logger = "0.7.*"
serde = { version = "1.0.193", features = ["std", "alloc", "derive", "rc", "serde_derive"] }
serde_json = "1.0.108"
eframe = { version = "0.24.0", features = ["__screenshot"] }

# For image support:
egui_extras = { version = "0.24.0", features = ["image"] }
